# simple_mass_data_transfer

./: .gitignore  Cargo.toml  README.md  build.rs
src/: buffered_io.rs  cli.rs  client.rs  client_events.rs  download.rs  event_handler.rs  files.proto  host.rs  lib.rs  main.rs  server.rs  ui.rs  utils.rs  var_int_decoder.rs
src/buffered_io/: comp_io.rs  counting_io.rs  encrypt_io.rs  hash_io.rs
src/ui/: client_ui.rs  mod.rs
