[package]
name = "simple_mass_data_transfer"
version = "2.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "smd_transfer"
path = "src/main.rs"

[dependencies]
# cli
clap = { version = "^4.4.18", features = ["derive", "suggestions"] }
clio = "^0.3.5"
glob = "^0.3.1"
# error handling
anyhow = "^1.0.79"
# concurrency
once_cell = "^1.19.0"
# networking
rmp-serde = "^1.2.0"
serde = { version = "^1.0", features = ["derive"] }
# io
walkdir = "^2.5"
bytesize = "^1.3.0"
# hashing
md-5 = "^0.10.6"
hex = "^0.4.3"
# encryption
chacha20poly1305 = "^0.10.1"
sha2 = "^0.10.2"
# compression
lz4_flex = "^0.11.3"